--- a/alcenos/desalogenacao.tex
+++ b/alcenos/desalogenacao.tex
@@ -1,21 +1,23 @@
+% DONE
+
 \begin{frame}
 \frametitle{Síntese}
 \framesubtitle{Desalogenação de derivado dialogenado}
 
-Desalogenação a partir da reação com zinco em pó (\ch{Zn_{(pó)}}).
+Desalogenação a partir da reação com zinco em pó.
 
 \begin{itemize}
 
 \item \textbf{Derivado vicinal:} alceno com manutenção da cadeia
 \begin{figure}
 \centering
-\scalebox{0.4}{
+\scalebox{0.55}{
 \schemestart
-\chemfig{CH_3-[:0]CH_2-[:0]CH(-[:90]Cl)-[:0]CH2(-[:90]Cl)}
+\chemfig{CH_3-[:0]CH_2-[:0]CH(-[:90]Cl)-[:0]CH_2(-[:90]Cl)}
 \+
 \ch{Zn_{(pó)}}
 \arrow{->}
-\chemfig{CH_3-[:0]CH_2-[:0]CH=[:0]CH2}
+\chemfig{CH_3-[:0]CH_2-[:0]CH=[:0]CH_2}
 \+
 \ch{ZnCl2}
 \schemestop
@@ -25,27 +27,42 @@ Desalogenação a partir da reação com zinco em pó (\ch{Zn_{(pó)}}).
 \item \textbf{Derivado geminado:} alceno com duplicação da cadeia
 \begin{figure}
 \centering
-\scalebox{0.1}{
+\scalebox{0.55}{
 \schemestart
-\chemfig{R(-[:0]CH(=[:0]CH_2))}
-\arrow{->[*{0}\color{blue}\ch{H2O}][*{0}\ch{H+}]}
-\chemfig{R(-[:0]CH(-[:270] {\color{blue}OH})(-[:0]CH_2(-[:270] {\color{blue}H})))}
-\schemestop
-}
-\end{figure}
-
-\item \textbf{Derivado isolado:} composto cíclico
-\begin{figure}
-\centering
-\scalebox{0.1}{
-\schemestart
-\chemfig{R(-[:0]CH(=[:0]CH_2))}
-\arrow{->[*{0}\color{blue}\ch{H2O}][*{0}\ch{H+}]}
-\chemfig{R(-[:0]CH(-[:270] {\color{blue}OH})(-[:0]CH_2(-[:270] {\color{blue}H})))}
+\chemfig{2\, CH_3CH_2CH_2-[:0]CH(-[:270]Cl)-[:0]Cl}
+\+
+\ch{2 Zn_{(pó)}}
+\arrow{->}
+\chemfig{CH_3CH_2CH_2CH=[:0]CHCH_2CH_2CH_3}
+\+
+\ch{2 ZnCl2}
 \schemestop
 }
 \end{figure}
 
 \end{itemize}
+
+\end{frame}
+
+\begin{frame}
+\frametitle{Síntese}
+\framesubtitle{Desalogenação de derivado dialogenado}
+
+Para derivados isolados, gera um composto cíclico.
+
+\begin{figure}
+\centering
+\scalebox{0.65}{
+\schemestart
+\chemfig{CH_3-[:0]CH(-[:270]Cl)-[:0]CH_2-[:0]CH_2-[:270]Cl}
+\+
+\ch{Zn_{(pó)}}
+\arrow{->}
+\chemfig{*3(--(-[:180]CH_3)-)}
+\+
+\ch{ZnCl2}
+\schemestop
+}
+\end{figure}
 
 \end{frame}
